<resources>
    <string name="app_name">ImFitPlus</string>
    <string name="texto_boas_vindas">Descubra seu perfil de saúde e receba recomendações personalizadas.</string>
    <string name="boas_vindas_subtitle">Boas-vindas</string>
    <string name="dados_pessoais_subtitle">Dados Pessoais</string>
    <string name="comece_aqui">Comece aqui</string>
    <string name="titulo_dados_pessoais">Insira Seus Dados</string>
    <string name="hint_nome">Nome Completo</string>
    <string name="hint_idade">Idade</string>
    <string name="label_sexo">Sexo</string>
    <string name="sexo_m">Masculino</string>
    <string name="sexo_f">Feminino</string>
    <string name="hint_peso">Peso</string>
    <string name="hint_altura">Altura</string>
    <string name="label_atividade">Nível de Atividade Física</string>
    <string name="calcular_imc_btn">Calcular IMC</string>
    <string name="erro_campo_vazio">Preencha todos os campos corretamente!</string>
    <string name="erro_altura_invalida">Altura deve ser maior que 0.5m.</string>
    <string name="resultado_imc_subtitle">Resultado IMC</string>
    <string name="resultados">Resultados</string>
    <string name="resultado_nome">Nome: %s</string>
    <string name="resultado_imc">IMC: %s</string>
    <string name="resultado_categoria">Categoria: %s</string>
    <string name="calcular_gasto_calorico_btn">Calcular Gasto Calórico</string>
    <string name="voltar_btn">Voltar</string>
    <string name="abaixo_do_peso">Abaixo do peso</string>
    <string name="normal">Normal</string>
    <string name="sobrepeso">Sobrepeso</string>
    <string name="obesidade">Obesidade</string>
    <string name="gasto_calorico_subtitle">Gasto Calórico Diário</string>
    <string name="resultado_tmb">Taxa Metabólica Basal: %s kcal/dia</string>
    <string name="resultado_gcd">Gasto Calórico Diário: %s kcal/dia</string>
    <string name="taxa_metabolica_basal">Taxa Metabólica Basal</string>
    <string name="calcular_peso_ideal">Calcular peso ideal</string>
    <string name="peso_ideal_subtitle">Peso Ideal</string>
    <string name="seu_peso_ideal">Seu peso ideal é: %s kg</string>
    <string name="peso_ideal">Peso ideal: %s kg</string>
    <string name="diferenca_peso">Diferença para o peso atual: %s kg</string>
    <string name="confirmar_dados_checkbox">Confirmo que os dados inseridos estão corretos</string>
    <string name="resumo_saude_subtitle">Resumo da Saúde</string>
    <string name="recomendacao_ingestao_agua">Recomendação de ingestão Água: %s L</string>
    <string name="resumo_saude_btn">Resumo Saúde</string>
    <string name="historico">Histórico</string>

    <string-array name="niveis_atividade">
        <item>Sedentário (0 dias/semana)</item>
        <item>Leve (1–3 dias/semana)</item>
        <item>Moderado (3–5 dias/semana)</item>
        <item>Intenso (6–7 dias/semana)</item>
    </string-array>
</resources>
